--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.r2dbc.url=r2dbc:postgresql://localhost:5432/api_domains
 spring.r2dbc.pool.max-size=30
 spring.data.r2dbc.repositories.enabled=true
 spring.r2dbc.pool.initial-size=20
+
+logging.level.org.springframework.r2dbc=debug
+
