Interceptor precedence tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,5 @@ spring.data.r2dbc.repositories.enabled=true
 spring.r2dbc.pool.initial-size=20
 
 logging.level.org.springframework.r2dbc=debug
+logging.level.org.lognet=debug
 
