--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>io.github.lognet</groupId>
             <artifactId>grpc-spring-boot-starter</artifactId>
-            <version>5.1.0</version>
+            <version>5.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.salesforce.servicelibs</groupId>
