--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ ext {
 }
 
 dependencies {
+	implementation 'org.springframework.experimental:spring-modulith-core'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 	implementation "io.github.lognet:grpc-spring-boot-starter:${grpcSpringbootStarterVersion}"
